lesson2/depl1_main.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-consumer
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: data-consumer
      version: v1
      environment: main
  template:
    metadata:
      labels:
        app: data-consumer
        version: v1
        environment: main
    spec:
      containers:
      - name: data-consumer
        image: larutyunov/data-consumer:7
        ports:
        - containerPort: 8080
