lesson2/depl1_rose.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-consumer-rose
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: data-consumer
      version: v2
      environment: rose
  template:
    metadata:
      labels:
        app: data-consumer
        version: v2
        environment: rose
    spec:
      containers:
      - name: data-consumer
        image: larutyunov/data-consumer:7
        ports:
        - containerPort: 8080
