lesson2/depl2_main.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-producer
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: data-producer
      environment: main
  template:
    metadata:
      labels:
        app: data-producer
        environment: main
    spec:
      containers:
      - name: data-producer
        image: larutyunov/data-producer:2
        ports:
        - containerPort: 8080
