lesson2/vs3-testing.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: data-consumer-canary
spec:
  hosts:
    - "data-consumer.default.svc.cluster.local"
  http:
    - match:
      # - sourceLabels:
      #     environment: rose
      - headers:
            separator:
              exact: rose
      route:
      - destination:
          host: data-consumer
          subset: rose
          port:
            number: 8080
        weight: 100
    - route:
      - destination:
          host: data-consumer
          subset: main
          port:
            number: 8080
